# nnpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
source/: nnpp.hpp
tests/: CMakeLists.txt  main-test.cpp  nn-test.cpp  nnai-test.cpp  perc-test.cpp  perf-test.cpp  second-main-test.cpp  trainer-test.cpp
